[gd_scene load_steps=9 format=3 uid="uid://b51w1y56388uq"]

[ext_resource type="Script" path="res://player/PlayerMovement.gd" id="1_do1lc"]
[ext_resource type="Texture2D" uid="uid://beryrksvjmto1" path="res://player/Dude.png" id="1_g0c6c"]
[ext_resource type="Texture2D" uid="uid://ba6fyb3eanykg" path="res://DefaultFloorTex.png" id="3_rtwg3"]
[ext_resource type="Texture2D" uid="uid://dic0hqj53tnjn" path="res://red.png" id="4_7ehte"]
[ext_resource type="AudioStream" uid="uid://biwv6jcohxjnl" path="res://assets/sounds/hurt.wav" id="5_jsc37"]
[ext_resource type="AudioStream" uid="uid://cs11hgo6puhhe" path="res://assets/sounds/death.wav" id="6_0iuef"]
[ext_resource type="PackedScene" uid="uid://dg0ixh1pbxy1f" path="res://player/deathshader.tscn" id="7_uain0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4xbv"]
size = Vector2(8, 8)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.98374, 0.985765)
script = ExtResource("1_do1lc")
friction = 0.8

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_g0c6c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_i4xbv")

[node name="BackgroundChargeBar" type="Sprite2D" parent="."]
position = Vector2(9.14876, 9.53674e-07)
scale = Vector2(1, 16.2311)
texture = ExtResource("3_rtwg3")

[node name="JumpHeightIndicator" type="Sprite2D" parent="BackgroundChargeBar"]
position = Vector2(0, 0.5)
rotation = -3.14159
texture = ExtResource("4_7ehte")
centered = false
offset = Vector2(-0.5, 0)

[node name="HurtCooldown" type="Timer" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jsc37")

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_0iuef")

[node name="deathanim" parent="." instance=ExtResource("7_uain0")]
z_index = 3

[connection signal="timeout" from="HurtCooldown" to="." method="_on_hurt_cooldown_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
